добавил попап с требованием авторизации

--- a/about_dontautorize.html
+++ b/about_dontautorize.html
@@ -203,6 +203,27 @@
     </footer>
         
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="auth-popup-overlay auth-popup-overlay-hidden"></div>
+<div class="auth-popup auth-popup-hidden">
+    <h1>Вы не авторизованы</h1>
+    <h2>Для большего функционала<br>произведите авторизацию</h2>
+    <button id="login-btn">Войти</button>
+    <p>Нет аккаунта?</p>
+</div>
+
             <!-- Всякие блядские попапы-->
      <div class="contact-popup contact-popup--hidden ">
         <div class="contact" style="position: relative;">
