--- a/maps_dontautoriz.html
+++ b/maps_dontautoriz.html
@@ -201,13 +201,13 @@
 
 
 
-    <div class="popup-overlay popup-hidden"></div>
-        <div class="dontautorize popup-hidden">
-        <h1>Вы не авторизованы</h1>
-        <h2>Для большего функционала<br>произведите авторизацию</h2>
-        <button id="login-btn">Войти</button>
-        <p>Нет аккаунта?</p>
-    </div>
+<div class="auth-popup-overlay auth-popup-overlay-hidden"></div>
+<div class="auth-popup auth-popup-hidden">
+    <h1>Вы не авторизованы</h1>
+    <h2>Для большего функционала<br>произведите авторизацию</h2>
+    <button id="login-btn">Войти</button>
+    <p>Нет аккаунта?</p>
+</div>
 
 
 
