--- a/pay.html
+++ b/pay.html
@@ -72,9 +72,9 @@
                 <h1> ПекарНя </h1>
                 <div class="footer-colums">
 
-                    <div class="footer-links-container">
-                        <a href="#" class="page-footer__nav-link">О нас</a>
-                        <a href="#" class="page-footer__nav-link"> Каталог </a>
+<div class="footer-links-container">
+                        <a href="about_dontautorize.html" class="page-footer__nav-link">О нас</a>
+                        <a href="about_catalog.html" class="page-footer__nav-link"> Каталог </a>
                         <a href="#" class="page-footer__nav-link"> Контакты </a>
                     </div>
 
